--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div>
                         <label id="name-label" for="name" class="">Name:</label>
                         <div class="input-group">
-                            <span class="input-group-text" id="name-addon"><i class="bi bi-person-circle"></i></span>
+                            <span class="input-group-text" id="name-addon"><img role="image" src="./assets/person-circle.svg" alt="person"></span>
                             <input id="name" type="text" class="" placeholder="Vanus Galerion" aria-label="Name"
                                 aria-describedby="name-addon" autofocus required>
                         </div>
@@ -41,7 +41,7 @@
                     <div>
                         <label id="email-label" for="email" class="">Email:</label>
                         <div class="input-group">
-                            <span class="input-group-text" id="email-addon"><i class="bi bi-envelope-at"></i></span>
+                            <span class="input-group-text" id="email-addon"><img role="image" src="./assets/envelope-at.svg" alt="envelope"></span>
                             <input id="email" type="email" class="" placeholder="vanus@example.com" aria-label="Name"
                                 aria-describedby="email-addon" required>
                         </div>
@@ -51,8 +51,7 @@
                     <div>
                         <label id="number-label" for="number" class="">Age:</label>
                         <div class="input-group">
-                            <span class="input-group-text" id="age-addon"><i
-                                    class="bi bi-calendar-check"></i></i></span>
+                            <span class="input-group-text" id="age-addon"><img src="./assets/calendar-check.svg" alt=""></span>
                             <input id="number" type="number" class="" placeholder="17" min="17" max="70"
                                 aria-label="Age" aria-describedby="age-addon" required>
                         </div>
